--- a/examples/AuAg_dimer.ipynb
+++ b/examples/AuAg_dimer.ipynb
@@ -23,7 +23,8 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "code_folding": []
+    "code_folding": [],
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -67,7 +68,8 @@
    "metadata": {
     "code_folding": [
      0
-    ]
+    ],
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -214,6 +216,7 @@
     "code_folding": [
      0
     ],
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -269,7 +272,8 @@
    "metadata": {
     "code_folding": [
      0
-    ]
+    ],
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -461,9 +465,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:python3]",
+   "display_name": "Python [conda root]",
    "language": "python",
-   "name": "conda-env-python3-py"
+   "name": "conda-root-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -475,7 +479,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
