Update Stockman Silver Nanolens.ipynb

--- a/examples/Stockman Silver Nanolens.ipynb
+++ b/examples/Stockman Silver Nanolens.ipynb
@@ -314,6 +314,7 @@
     "for x in v_x:\n",
     "    for y in v_y:\n",
     "        out = py_gmm.gmm_py.gmm_f2py_module.exyz(\"yes\", # include incident local field\n",
+    "                                                 len(v_r),  # number of spheres\n",
     "                                                 n_stop,  # maximum number for expansion coefficients\n",
     "                                                 0, # =0 Linear, =1 Left Circular, =2 Right Circular\n",
     "                                                 lf_ratio,  # plot sphere contribution up to distance d=lf_ratio*r\n",
